--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
         app:layout_constraintHorizontal_bias="0.0"
-        android:id="@+id/rv_list_posts" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
+        android:id="@+id/rv_list_posts" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_post"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
